--- a/architecture-examples/backbone/index.html
+++ b/architecture-examples/backbone/index.html
@@ -28,6 +28,7 @@
 			<div class="view">
 				<input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
 				<label><%- title %></label>
+				<div class="url-info"><%- url %></div>
 				<button class="destroy"></button>
 			</div>
 			<input class="edit" value="<%- title %>">
