Add css to do some basic styling

--- a/architecture-examples/backbone/index.html
+++ b/architecture-examples/backbone/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>Backbone.js • TodoMVC</title>
 		<link rel="stylesheet" href="bower_components/todomvc-common/base.css">
+		<link rel="stylesheet" href="url.css">
 	</head>
 	<body>
 		<section id="todoapp">
