--- a/architecture-examples/backbone/index.html
+++ b/architecture-examples/backbone/index.html
@@ -29,7 +29,7 @@
 			<div class="view">
 				<input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
 				<label><%- title %></label>
-				<%= url ? '<div class="url-info">url</div>' : '' %>
+				<%= url ? '<div class="url-info">is URL<br></div>' : '' %>
 				<button class="destroy"></button>
 			</div>
 			<input class="edit" value="<%- title %>">
